+ git ignore + конфигурация точки доступа к API из БД (таблица provider)